kotlin-parser/src/test/semlang/validatorTests/fail/extendedLiteral2.sem
struct Digit {
  value: Natural
  requires {
    Natural.lessThan(value, Natural."10")
  }
}

function getDigit(): Digit {
  Digit."10"
}
